styles/Projects.module.scss
@import "./variables";

.projectCard {
  background-color: var(--white);
  border-radius: 36px;
  padding: 32px;
  display: flex;
  color: var(--black);
  grid-column: 1 / span 2;

  &:nth-child(odd) {
    @include mq("md") {
      grid-column: 1 / span 1;
    }
  }

  &:nth-child(even) {
    @include mq("md") {
      grid-column: 2 / span 1;
    }
  }

  img {
    object-fit: cover;
    border-radius: 50%;
  }
}

.largeProjectCard {
  grid-column: 1 / span 2;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 150px;
  color: var(--white);
  position: relative;
  border-radius: 32px;

  div {
    position: absolute;
    bottom: 0px;
    z-index: 3;
    opacity: 0;
    transform: translateY(30px);
    transition: 0.5s;
    padding: 14px 10%;
  }

  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 100%;
    border-radius: 32px;
    background: rgba(black, 0.6);
    z-index: 2;
    transition: 0.5s;
    opacity: 0;
  }

  &:hover {
    &::before {
      opacity: 1;
    }

    div {
      opacity: 1;
      transform: translateY(0px);
    }
  }
}

.allProjects {
  margin-top: 50px;
  display: grid;
  grid-gap: 32px;
  grid-template-columns: 1fr 1fr;
  // @include mq("md") {
  // }

  div {
    margin-left: 16px;
  }
}

